Closed Bug 218411 Opened 21 years ago Closed 19 years ago

Duplicate contact is added even though address being sent to is in the Additional Email field (collection)

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: paul, Assigned: standard8)

References

Details

(Keywords: fixed-seamonkey1.1a, fixed1.8.1, verified1.8.1.3)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5a) Gecko/20030728 Mozilla Firebird/0.6.1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5a) Gecko/20030728 Mozilla Firebird/0.6.1 After sending an email to the "Additional Email" of a contact in your address book with both "Email" and "Additional Email" fields filled in will add this contact to the address book again with the same name and the "Additional Email" as the "Email" field. Reproducible: Always Steps to Reproduce: 1. Create a contact filling in both the "Email" and "Additional Email" fields 2. Send mail to the "Additional Email" from step 1 Actual Results: Duplicate contact added to address book with "Email" field populated as "Aditional Email" from previous contact. Expected Results: Nothing.
putting in right component
Assignee: scott → sspitzer
Product: Thunderbird → MailNews
QA Contact: asa → nbaca
Version: unspecified → 1.0 Branch
I believe my problem is related to this one. To create duplicate entries... 1) Add e-mail address to Address Book. (ex. Name "Johny", Email "jsm@xyx.com") 2) e-mail "Johny" and have "Johny" reply. 3) Suspose "Johny" replys and his profile is setup as "Smith, John" jsm@xyx.com 4) Reply to "Johny"'s reply. 5) A new Address book entry is added with Name "Smith, John", Email "jsm@xyx.com") I don't want a new entry for "jsm@xyx.com". I want to keep the one I have and leave the name as "Johny".
does this bug depend on a fix for ancient bug 45946?
Product: Browser → Seamonkey
Assignee: sspitzer → mail
Another example of bad behaviour: "Johny" third email "jsm@XYX.com" produces a third entry. The email address should be treated case insensitive.
Assignee: mail → nobody
Component: Address Book → MailNews: Address Book
Product: Mozilla Application Suite → Core
QA Contact: nbaca → addressbook
Version: 1.0 Branch → Trunk
*** Bug 278323 has been marked as a duplicate of this bug. ***
*** Bug 317688 has been marked as a duplicate of this bug. ***
Added (collection) onto summary to make it easier to search for & taking.
Assignee: nobody → bugzilla
OS: Windows XP → All
Hardware: PC → All
Summary: Duplicate contact is added even though address being sent to is in the Additional Email field → Duplicate contact is added even though address being sent to is in the Additional Email field (collection)
This patch adds an additional check so if the email is not found in the primary email address for the database, we also then check the additional email address. Additionally, if the email is found in the additional email address field, we then don't update the card. I was a bit concerned about performance, but searching a 1000 contact database twice in the way that this patch seems to take no time at all (i.e. < 1 second), its the actual sending that takes the time...
Attachment #204939 - Flags: superreview?(dmose)
Attachment #204939 - Flags: review?(bienvenu)
Status: NEW → ASSIGNED
Comment on attachment 204939 [details] [diff] [review] Check in additional email address as well. looks OK -it's too bad we can't use FindRow for this, but it will only find one instance...
Attachment #204939 - Flags: review?(bienvenu) → review+
Comment on attachment 204939 [details] [diff] [review] Check in additional email address as well. sr=dmose
Attachment #204939 - Flags: superreview?(dmose) → superreview+
Fix checked into trunk: /cvsroot/mozilla/mailnews/addrbook/src/nsAbAddressCollecter.cpp,v <-- nsAbAddressCollecter.cpp new revision: 1.56; previous revision: 1.55
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment on attachment 204939 [details] [diff] [review] Check in additional email address as well. Requesting approval for 1.8.1 branch. This patch has been on trunk for a while now. It improves our collected addresses handling to reduce the amount of duplicates that we create.
Attachment #204939 - Flags: approval1.8.1?
Attachment #204939 - Flags: approval1.8.1? → branch-1.8.1?(mscott)
Attachment #204939 - Flags: approval-branch-1.8.1?(mscott) → approval-branch-1.8.1+
Patch checked into 1.8 branch. Checking in mailnews/addrbook/src/nsAbAddressCollecter.cpp; /cvsroot/mozilla/mailnews/addrbook/src/nsAbAddressCollecter.cpp,v <-- nsAbAddressCollecter.cpp new revision: 1.55.2.1; previous revision: 1.55
verified on the 1.8 branch using the tbird cand build, version 2.0.0.0 (20070326). I verified on Win Vista, following the STR in the reporter's comment. I did not get a duplicate address book entry. Adding branch verified keyword.
Keywords: verified1.8.1.3
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: