Bug 218411 Duplicate contact is added even though address being sent to is in the Additional Email field (collection). r=bienvenu,sr=dmose